# ironman-2023

./: .gitignore  README.md  index.html
source_code/D04/: hello-qt.pro  hello_qt.cpp
source_code/D07/: d07.pro  main.cpp
source_code/D09/: d09.pro  main.cpp
source_code/D10/: CMakeLists.txt  d10.pro  main.cpp
source_code/D15/: mainwindow.cpp  mainwindow.h
source_code/D16/: mainwindow.cpp
source_code/D17/: mainwindow.cpp  mainwindow.h
source_code/D18/: mainwindow.cpp  mainwindow.h
source_code/D19/: mainwindow.cpp  mainwindow.h
source_code/D20/: mainwindow.cpp  mainwindow.h
source_code/D21/: mainwindow.cpp
source_code/D22/: mainwindow.cpp  mainwindow.h
source_code/D30/: D30.pro  main.cpp  my_translation.ts
source_code/d08/: d08.pro  main.cpp
